--- a/app/templates/a.html
+++ b/app/templates/a.html
@@ -15,6 +15,49 @@
 	</head>
 	<body>
 		<!-- Your layout here -->
-
+    <div class="container">
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div>
+      </div>
+      <div> 
+      </div>
+    </div>
+    
 	</body>
+  
+  <style>
+    
+    body {
+      background: purple;
+    }
+    
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-between;
+      align-content: center;
+      height: 30vw;
+    }
+    
+    .container div {
+      font-size: 11vw;
+      padding: .5em;
+      margin: .1em;
+      background: orange;
+    }
+    
+  </style>
+  
 </html>
