--- a/app/templates/f.html
+++ b/app/templates/f.html
@@ -15,6 +15,42 @@
 	</head>
 	<body>
 		<!-- Your layout here -->
-
+    <div class="container">
+      <div>
+        
+      </div>
+      <div>
+        
+      </div>
+      <div>
+        
+      </div>
+    </div>
 	</body>
+  <style>
+    body {
+      background: purple;
+    }
+    
+    .container {
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: start;
+      align-content: start;
+    }
+    
+    .container div {
+      font-size: 11vw;
+      padding: .5em;
+      margin: .1em;
+      background: orange;
+      align-content: center;
+      width: 100%;
+      height: 100%;
+    }
+    
+   
+
+  </style>
 </html>
