--- a/app/templates/g.html
+++ b/app/templates/g.html
@@ -15,6 +15,40 @@
 	</head>
 	<body>
 		<!-- Your layout here -->
-
+    <div class="container">
+      <div>
+        
+      </div>
+      <div>
+        
+      </div>
+      <div>
+        
+      </div>
+    </div>
 	</body>
+  <style> 
+    body {
+      background: purple;
+    }
+    
+    .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-content: flex-start;
+    }
+    
+    .container div {
+      font-size: 11vw;
+      padding: .5em;
+      margin: .1em;
+      background: orange;
+      align-content: center;
+      width: 100%;
+      height: 1000px;
+    }
+    
+    
+  </style>
 </html>
